<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/dark_mode"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_outline_dark_mode_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/layer_list"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dark_mode" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="John Doe"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/profile_pic"
                app:layout_constraintStart_toStartOf="@+id/profile_pic"
                app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <Button
                android:id="@+id/button2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/orange"
                android:text="@string/upgrade"
                app:layout_constraintEnd_toEndOf="@+id/email"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <Button
                android:id="@+id/privacy"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/btns_color"
                android:drawableLeft="@drawable/ic_outline_privacy_tip_24"
                android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:gravity="left|center_vertical"
                android:text="@string/privacy"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/button2"
                app:layout_constraintStart_toStartOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <Button
                android:id="@+id/history"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/btns_color"
                android:drawableLeft="@drawable/ic_outline_history_24"
                android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:gravity="left|center_vertical"
                android:text="@string/history"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/privacy"
                app:layout_constraintStart_toStartOf="@+id/privacy"
                app:layout_constraintTop_toBottomOf="@+id/privacy" />

            <Button
                android:id="@+id/help"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/btns_color"
                android:drawableLeft="@drawable/ic_outline_help_outline_24"
                android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:gravity="left|center_vertical"
                android:text="@string/help"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/history"
                app:layout_constraintStart_toStartOf="@+id/history"
                app:layout_constraintTop_toBottomOf="@+id/history" />

            <Button
                android:id="@+id/settings"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/btns_color"
                android:drawableLeft="@drawable/ic_outline_settings_24"
                android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:gravity="left|center_vertical"
                android:text="@string/setting"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/help"
                app:layout_constraintStart_toStartOf="@+id/help"
                app:layout_constraintTop_toBottomOf="@+id/help" />

            <Button
                android:id="@+id/invite"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/btns_color"
                android:drawableLeft="@drawable/ic_outline_person_add_24"
                android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:gravity="left|center_vertical"
                android:text="@string/invite"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/settings"
                app:layout_constraintStart_toStartOf="@+id/settings"
                app:layout_constraintTop_toBottomOf="@+id/settings" />

            <Button
                android:id="@+id/logout"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/blue"
                android:text="Logout"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/invite"
                app:layout_constraintStart_toStartOf="@+id/invite"
                app:layout_constraintTop_toBottomOf="@+id/invite" />

            <View
                android:layout_width="200dp"
                android:layout_height="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/logout"
                app:layout_constraintStart_toStartOf="@+id/logout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>